@startuml Sign in with Google
skinparam classAttributeIconSize 0
package "API" {
    class AuthController {
        +ExternalLogin(command: ExternalLoginCommand): Task<IActionResult>
    }
}

package "Application" {
    class ExternalLoginCommand {
        +ProviderKey: string
        +ProviderEmail: string
        +FullName: string
        +Picture: string?
    }

    class ExternalLoginCommandHandler {
        -identityService: IIdentityService
        +Handle(request: ExternalLoginCommand): Task<ErrorOr<ExternalLoginResponse>>
    }

    interface IIdentityService {
        +ExternalLogin(request: ExternalLoginRequest): Task<ErrorOr<ExternalLoginResponse>>
    }

    class ExternalLoginRequest {
        +Provider: string
        +ProviderKey: string
        +Email: string
        +FullName: string
        +Picture: string?
    }
}

package "Infrastructure" {
    class IdentityService {
        -userRepository: IUserRepository
        -tokenManager: ITokenManager
        +ExternalLogin(request: ExternalLoginRequest): Task<ErrorOr<ExternalLoginResponse>>
    }
}

package "Domain" {
    class UserEntity {
        +Id: Guid
        +Username: string
        +Email: string
        +GoogleId: string?
        {static} +CreateFromGoogle(...): UserEntity
    }
}

AuthController ..> ExternalLoginCommand : uses
ExternalLoginCommand ..> ExternalLoginCommandHandler : handled by
ExternalLoginCommandHandler --> IIdentityService : calls
IIdentityService <|.. IdentityService : implements
IdentityService ..> ExternalLoginRequest : uses
IdentityService --> UserEntity : creates/retrieves
@enduml
